--- a/_posts/stories/2017-11-10-yosemite.markdown
+++ b/_posts/stories/2017-11-10-yosemite.markdown
@@ -50,7 +50,7 @@ images:
 Мы знали, что Йосемите - обязательное место для посещения, что парк потрясает, и туда обязательно стоит съездить. Также мы знали, что все едут туда на "хайкинг".
 Я долго искала, как же по-русски перевести это загадочное слово, пока на помощь не пришла Википедия.
 
-Внимание, оказывается хайкинг - это пешеходный туризм. Вот так всё просто.
+Внимание! Оказывается хайкинг - это пешеходный туризм. Вот так всё просто.
 
 Поездка в наш первый Национальный парк обещала быть активной.
 
@@ -58,7 +58,7 @@ images:
 
 Когда к нам приехала Даша, недавно пробежавшая свой первый марафон, мы поняли, что лучше момента не будет. Надо брать Дашу и ехать. Так мы и сделали.
 
-Выехав в пятницу около семи вечера, к ночи мы были в гостинице.  Дорога от Сан Франциско до Йосемите составляет около 260 километров. Мы остановились в *Yosemite Cedar Lodge*. Эта гостиница/мотель находится в 15 минутах от въезда в парк. На территории самого Yosemite останавливаться не только дорого, но еще и сложно: гостиницу необходимо бронировать ооочень заранее.
+Выехав в пятницу около семи вечера, к ночи мы были в гостинице *Yosemite Cedar Lodge*. От Сан Франциско мы проехали около 260 километров, а от въезда в парк нам оставалось 15 минут. На территории самого Yosemite останавливаться не только дорого, но еще и сложно: гостиницу необходимо бронировать ооочень заранее.
 
 {% include image src="img_3459.jpg" %}
 
@@ -66,16 +66,16 @@ images:
 
 {% include image src="img_3222.jpg" %}
 
-Регистрируясь в гостинице, мы обнаружили что интернет не работает, и мобильная сеть в принципе не ловит. К этому мы не подготовились. Карты заранее не загрузили, родителей не предупредили. =) Так что будущие туристы - готовьтесь тщательнее.
+Регистрируясь в гостинице, мы обнаружили, что интернет не работает, и мобильная сеть в принципе не ловит. К этому мы не подготовились. Карты заранее не загрузили, родителей не предупредили. =) Так что, будущие туристы, готовьтесь тщательнее.
 
-На следующее утро мы постарались выехать рано. На въезде в парк *Arch Rock Entrance*все-равно ждала очередь. Двигалась она довольно быстро, но лишний раз напомнила как американцы любят всей семьей поехать в парк и заняться "пешеходным туризмом".
+На следующее утро мы постарались выехать рано. На въезде в парк *Arch Rock Entrance*все-равно ждала очередь. Двигалась она довольно быстро, но лишний раз напоминала как американцы любят всей семьей поехать в парк и заняться "пешеходным туризмом".
 
 {% include image src="img_3956.jpg" %}
 
 >Если немного углубиться в историю, то считается, что первые люди на территории Yosemite могли быть 8000-10000 лет назад.
 >До того, как на этой территории появились первые европейцы, здесь жили индейские племена сьерра-мивок и паюты. Ко времени прихода сюда первых поселенцев, в долине Йосемити обитала группа индейцев, называвшая себя аваничи (Ahwahnechee)
 
->Только в 1984 году парк получил статус «Всемирного наследия» под эгидой ЮНЕСКО. С самого начала он был задуман как национальный парк. Среди его организаторов — один из первых защитников идеи заповедников Джон Мьюр. Чрезмерный выпас скота на пастбищах вырубка деревьев Секвой и другая деятельность в ущерб природе вынудили Джона Мьюра выступить с идеей ужесточения условий охраны этой территории. 1 октября 1890 года Конгресс дал парку статус национального. Мьюр также убедил местные власти не пасти скот в альпийских лугах.
+>Только в 1984 году парк получил статус «Всемирного наследия» под эгидой ЮНЕСКО. С самого начала он был задуман как национальный парк. Среди его организаторов — один из первых защитников идеи заповедников Джон Мьюр. Чрезмерный выпас скота на пастбищах, вырубка деревьев Секвой и другая деятельность в ущерб природе вынудили Джона Мьюра выступить с идеей ужесточения условий охраны этой территории. 1 октября 1890 года Конгресс дал парку статус национального. Мьюр также убедил местные власти не пасти скот в альпийских лугах.
 
 Считается, что в результате эрозии различных горных пород, испытавших тектоническое поднятие и сопутствующих этому разломов, и появились долины, каньоны, куполовидные складки и другие формы рельефа Yosemite.
 
@@ -90,18 +90,18 @@ images:
 {% include image src="img_3961.jpg" title="Bradalveil Fall" %}
 
 Проехав дальше, мы хотели остановиться у начала маршрута, ведущего к **Glacier Point**. Это сложный "хайк", но очень популярный и красивый.
-Однако, этому не суждено было сбыться. Припарковаться было негде.
+Однако этому не суждено было сбыться. Припарковаться было негде.
 
-Мы поехали дальше, надеясь оставить машину с другой стороны реки Merdec, но ни на парковке у Visitor Center, ни у Yosemite Falls мест не было.
+Мы поехали дальше, надеясь оставить машину с другой стороны реки Merdec, но, ни на парковке у Visitor Center, ни у Yosemite Falls мест не было.
 
 Я упоминала невероятные размеры Национального парка. Долина Йосемите занимает только один процент от общей территории всего Йосемите, однако, именно туда стекается большинство посетителей. С этим и связаны проблемы с парковкой.
 
 {% include image src="img_4010.jpg" title="Закат в Yosemite" %}
 
-Мы решили, что отсутствие парковки - отличная возможность осмотреть окрестности Долины. Тем более, что в Yosemite такое количество гор, водопадов и водоемов, что за два дня их не посмотреть.
+Мы решили, что отсутствие парковки - отличная возможность осмотреть окрестности Долины. Тем более, что в Yosemite такое количество гор, водопадов и водоемов, что за два дня их все не посетить.
 
 По Big Oak Flat Road мы поехали на север. Мы ехали все дальше, долина Yosemite становилась все меньше, а облака ближе. Я не посоветую конкретных мест. Останавливаться стоит в любой понравившейся точке (благо тут уже с парковкой проблем совсем нет).
-Мы останавливались у моста, проходящего над горной рекой, забрались под него и на камнях, между которыми текла горная река, обедали. Это был немного захватывающий обед!
+Мы припарковались у моста, проходящего над горной рекой, забрались под него и на камнях, между которыми текла горная река, обедали. Это был немного захватывающий обед!
 
 {% include image src="img_3072.jpg" title="Место для обеда" %}
 
@@ -121,9 +121,9 @@ images:
 
 В воскресение, приехав в парк рано, мы припарковали машину! Ура!
 
-За один день мы по покорили две горы. Ну или почти покорили =) Поднялись до середины **Yosemite Fall**, откуда  открылся вид на El Capitan и всю Долину Yosemite.
+За один день мы покорили две горы. Ну, или почти покорили =) Поднялись до середины **Yosemite Fall**, откуда  открылся вид на El Capitan и всю Долину Yosemite.
 А поднявшись на самый верх **Vernal Falls**, увидели **Nevada Falls** и **Half Dome**.
-Это были не самые простые подъемы. А спускаться было очень страшно и скользко. Но когда видишь пожилых людей, радостно забирающихся в гору или женщин, гордо говорящих, что у них уже 7-ой месяц беременности, то понимаешь, что и тебе всё ни по чем.
+Это были не самые простые подъемы. А спускаться очень страшно и скользко. Но когда видишь пожилых людей, радостно забирающихся в гору или женщин, гордо говорящих, что у них уже 7-ой месяц беременности, то понимаешь, что и тебе всё нипочем.
 
 {% include image src="waterfall.jpg" title="Водопад Vernal Fall" %}
 
@@ -132,7 +132,7 @@ images:
 **Советы путешественникам:**
 * позаботьтесь об офлайн картах заранее
 * приезжайте в парк как можно раньше (9-10 утра - это уже поздно). C парковкой у Yosemite Falls, Glacier point и Visitor Center в такое время будут сложности.
-* удобная и не сколькая обувь обязательна! если проблемы с коленями, то лучше взять с собой наколенники, спуски с гор могут быть очень резким и длинными. Берегите ноги!
+* удобная и не скользкая обувь обязательна! если проблемы с коленями, то лучше взять с собой наколенники, спуски с гор могут быть очень резким и длинными. Берегите ноги!
 * здесь сильно прохладнее, чем в Сан Франциско. Если днем на солнце и будет очень жарко, то к вечеру вы почувствуете настоящий холод. Берите побольше одежды с собой.
 * еда! в Visitor Center есть кафешка, в которой можно покушать. Но вы не захотите быть к ней привязаны, поэтому для свободы передвижения - берите побольше еды с собой. Ну и побольше снэков, ни спасают.
 * если планируете посетить больше 2 национальных парков по всей Америке за год - берите годовой абонемент
