--- a/_posts/stories/2017-11-10-yosemite.markdown
+++ b/_posts/stories/2017-11-10-yosemite.markdown
@@ -121,9 +121,9 @@ images:
 
 В воскресение, приехав в парк рано, мы припарковали машину! Ура!
 
-За один день мы покорили две горы. Ну, или почти покорили =) Поднялись до середины **Yosemite Fall**, откуда  открылся вид на El Capitan и всю Долину Yosemite.
+За один день мы покорили две горы. Ну, или почти покорили =) Поднялись до середины **Yosemite Fall**, откуда открылся вид на **El Capitan** и всю Долину Yosemite.
 А поднявшись на самый верх **Vernal Falls**, увидели **Nevada Falls** и **Half Dome**.
-Это были не самые простые подъемы. А спускаться очень страшно и скользко. Но когда видишь пожилых людей, радостно забирающихся в гору или женщин, гордо говорящих, что у них уже 7-ой месяц беременности, то понимаешь, что и тебе всё нипочем.
+Это были не самые простые маршруты. Мы поднялись больше, чем на 600 метров. А спускаться было очень страшно и скользко. Но когда видишь пожилых людей, радостно забирающихся в гору или женщин, гордо говорящих, что у них уже 7-ой месяц беременности, то понимаешь, что и тебе всё нипочем.
 
 {% include image src="waterfall.jpg" title="Водопад Vernal Fall" %}
 
