fixed typo in yosemite

--- a/_posts/stories/2017-11-10-yosemite.markdown
+++ b/_posts/stories/2017-11-10-yosemite.markdown
@@ -101,7 +101,7 @@ images:
 Мы решили, что отсутствие парковки - отличная возможность осмотреть окрестности Долины. Тем более, что в Yosemite такое количество гор, водопадов и водоемов, что за два дня их все не посетить.
 
 По Big Oak Flat Road мы поехали на север. Мы ехали все дальше, долина Yosemite становилась все меньше, а облака ближе. Я не посоветую конкретных мест. Останавливаться стоит в любой понравившейся точке (благо тут уже с парковкой проблем совсем нет).
-Мы припарковались у моста, проходящего над горной рекой, забрались под него и на камнях, между которыми текла горная река, обедали. Это был немного захватывающий обед!
+Мы припарковались у моста, проходящего над горной рекой, забрались под него и на камнях, между которыми текла горная река, обедали. Это был захватывающий обед!
 
 {% include image src="img_3072.jpg" title="Место для обеда" %}
 
