fixed saint p name

--- a/_posts/stories/2017-03-17-5years.markdown
+++ b/_posts/stories/2017-03-17-5years.markdown
@@ -9,11 +9,11 @@ thumbnail: 2017-02-23_17-43-01_915.jpeg
 
 ---
 
-Итак, пять дней с прошлого поста- подводим итоги. Наверное цифра пять тут не с проста. Ведь в понедельник было именно пять лет с нашего первого свидания. Даже не верится, что прошло столько времени. Хотя, наверное, бывалые скажут, что все еще у вас впереди! Так и есть, я совершенно согласна. 
+Итак, пять дней с прошлого поста- подводим итоги. Наверное цифра пять тут не с проста. Ведь в понедельник было именно пять лет с нашего первого свидания. Даже не верится, что прошло столько времени. Хотя, наверное, бывалые скажут, что все еще у вас впереди! Так и есть, я совершенно согласна.
 <!--separate-->
-Кажется, что это было совсем недавно. С другой стороны, много всего было за эти годы, так что могу с уверенностью сказать, что мы их провели прекрасно. И я очень рада, что эта интересная дата встретила нас тут- в Сан Франциско. Много всего прекрасного происходит вокруг. Главное- замечать и ценить.
-Как уже завелось, мы ходили на йогу в Grace Cathedral. Благодаря смене часов теперь у нас на 1 час светового дня больше. Это прекрасно, когда темнеет только после 7. Почему я именно сейчас это вспомнила- да потому, что на протяжении всего занятия витражи в соборе светились. В этом есть что-то особенное и до сих пор меня потрясает заниматься йогой в таком месте. 
-И остального- наверное нечего добавить. Хорошая была неделя. Мы не перестаем делать романтические прогулки вечером в окрестностях пирса. А завтра мы поедем в новый road trip. В планах Monterey, Carmel by the sea и Big Sur, если нам повезет в него пробраться, ведь дорога похоже перекрыта. 
-Спасибо, что читаете! Я вернусь после выходных! 
+Кажется, что это было совсем недавно. С другой стороны, много всего было за эти годы, так что могу с уверенностью сказать, что мы их провели прекрасно. И я очень рада, что эта интересная дата встретила нас тут- в Сан-Франциско. Много всего прекрасного происходит вокруг. Главное- замечать и ценить.
+Как уже завелось, мы ходили на йогу в Grace Cathedral. Благодаря смене часов теперь у нас на 1 час светового дня больше. Это прекрасно, когда темнеет только после 7. Почему я именно сейчас это вспомнила- да потому, что на протяжении всего занятия витражи в соборе светились. В этом есть что-то особенное и до сих пор меня потрясает заниматься йогой в таком месте.
+И остального- наверное нечего добавить. Хорошая была неделя. Мы не перестаем делать романтические прогулки вечером в окрестностях пирса. А завтра мы поедем в новый road trip. В планах Monterey, Carmel by the sea и Big Sur, если нам повезет в него пробраться, ведь дорога похоже перекрыта.
+Спасибо, что читаете! Я вернусь после выходных!
 
 {% include image src="2017-02-23_17-43-01_915.jpeg" %}
