--- a/_posts/stories/2017-03-31-friends.markdown
+++ b/_posts/stories/2017-03-31-friends.markdown
@@ -21,7 +21,7 @@ thumbnail: 2017-03-11_14-56-40_993.jpg
 
 Ну а сейчас в окошке светит солнце (как и в большинство других дней), я уже хожу по улице в шортах или сарафане и чувствую настоящее лето. Удивительно, как одежда придает ощущения времени года.
 
-Выходные обещают быть очень интересными. Завтра у Дины соревнования. Так получилось, что моя давняя приятельница по танцам в семейном центре "Ева" теперь тоже живет в Сан Франциско, вернее в Bay Area. У нее двое детей и она преподает гимнастику. И она тоже будет на этих соревнованиях. Так что удастся с ней, наконец, увидеться.
+Выходные обещают быть очень интересными. Завтра у Дины соревнования. Так получилось, что моя давняя приятельница по танцам в семейном центре "Ева" теперь тоже живет в Сан-Франциско, вернее в Bay Area. У нее двое детей и она преподает гимнастику. И она тоже будет на этих соревнованиях. Так что удастся с ней, наконец, увидеться.
 
 В воскресение мы идем на концерт группы "Звери". Вот такая тут ностальгия нас накрывает. Неожиданно выяснилось, что я знаю очень многие их песни и поэтому с радостью приняла приглашение сходить на концерт.
 
