--- a/_posts/stories/2017-05-01-guests.markdown
+++ b/_posts/stories/2017-05-01-guests.markdown
@@ -21,8 +21,6 @@ images:
   - IMG_99021.JPG
   - IMG_99171.JPG
   - IMG_9915.JPG
-
-
 ---
 
 Давно от меня не было поста. Так странно, сама себе придумала блог, а теперь переживаю, что не успеваю писать.
@@ -62,7 +60,7 @@ images:
 
   {% include image src="IMG_9901.JPG" %}
 
-* как только все оказываются у моста, обычно начинается фотосессия, что неудивительно, ведь многие приезжают в Сан Франциско, чтобы посмотреть мост (который очень потрясает, но не является единственным интересным местом в городе)
+* как только все оказываются у моста, обычно начинается фотосессия, что неудивительно, ведь многие приезжают в Сан-Франциско, чтобы посмотреть мост (который очень потрясает, но не является единственным интересным местом в городе)
 * дальше у вас снова два варианта:
   * одни из наших друзей еще по дороге к мосту взяли на прокат велосипеды, поехали через мост и в **_Sausalito_** - очень уютный городок с променадом и видом на  San Francisco
   * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **_Haight street_**, соседствующую с **_Golden Gate park_**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующие, а дух (запах) свободы чувствуется на каждом углу
@@ -75,7 +73,7 @@ images:
 
 * если вы идете по нашему маршруту, то у вас уже должен был наступить вечер и вы должны были оказаться на углу Broadway и Columbus ave. Здесь, я советую вам неспешно прогуляться и направиться ко мне в гости - на Stockton street. За чаем и посиделками у камина =)
 
-Конечно, Сан Франциско- огромный город и увидеть все за несколько дней просто невозможно, но вот вам еще неполный список мест, которые я бы очень хотела, чтобы вы посетили:
+Конечно, Сан-Франциско- огромный город и увидеть все за несколько дней просто невозможно, но вот вам еще неполный список мест, которые я бы очень хотела, чтобы вы посетили:
 
   * прогулялись по **Embarcadero** - променаду, идущему от **Ferry building** и до самого пирса 39
   * провели время на **Ocean beach** - самом большом пляже в города
