--- a/_posts/stories/2017-09-05-piter.markdown
+++ b/_posts/stories/2017-09-05-piter.markdown
@@ -53,10 +53,10 @@ images:
   - img_1665.jpg
   - img_1674.jpg
 
-   
+
 ---
 
-Я сидела в самолете и пролетала где-то над Атлантикой. Рядом была моя сестренка Женечка и впереди нас ждал целый месяц приключений. Мы летели в Нью Йорк, а через несколько дней и в Сан Франциско! Это было начало одного путешествия и окончание другого.
+Я сидела в самолете и пролетала где-то над Атлантикой. Рядом была моя сестренка Женечка и впереди нас ждал целый месяц приключений. Мы летели в Нью Йорк, а через несколько дней и в Сан-Франциско! Это было начало одного путешествия и окончание другого.
 
 МЫ ЛЕТЕЛИ ИЗ ПИТЕРА!
 
@@ -65,18 +65,18 @@ images:
 
 Я ездила к родителям. И об этой поездке я хочу сегодня рассказать.
 
-Когда я летела из Сан Франциско, я уезжала из нового дома и летела в родительский. Чувство дома потеряно окончательно! 
+Когда я летела из Сан-Франциско, я уезжала из нового дома и летела в родительский. Чувство дома потеряно окончательно!
 
 Перелет на Родину был не из легких: 22 часа, две пересадки и опоздание одного из рейсов. Но это ничто по сравнению с чувствами, когда ты можешь обнять, поцеловать и прижаться к родным! Ведь последние шесть месяцев они были в экране компьютера.
 
-Много ли вы знаете о расставаниях? Уверена, что многие знают больше, чем я могла бы представить и все мои переживания покажутся лишь шуткой. 
-Всего каких-то 15-20 лет назад люди, уезжающие заграницу не имели никакой возможности связаться с родными и с этим жили, и даже были счастливы. 
+Много ли вы знаете о расставаниях? Уверена, что многие знают больше, чем я могла бы представить и все мои переживания покажутся лишь шуткой.
+Всего каких-то 15-20 лет назад люди, уезжающие заграницу не имели никакой возможности связаться с родными и с этим жили, и даже были счастливы.
 
 Мы же, привыкли, что можем звонить и даже видеть друг друга без особых сложностей. Но этого так мало! Так не хватает!
 
 Это были потрясающие каникулы! Я провела очень много времени с родителями.
 
-Мы совершили великолепную поездку в Великий Новгород, катались там на кораблике, ездили на дачу, купались и гоняли все вместе на велосипедах. 
+Мы совершили великолепную поездку в Великий Новгород, катались там на кораблике, ездили на дачу, купались и гоняли все вместе на велосипедах.
 
 Мы гуляли по теплому Питеру, который подарил прекрасную погоду на все время моей поездки. Встречали закаты.
 
@@ -87,8 +87,8 @@ images:
 
 Конечно, очень хотелось бы встретиться и со всеми друзьями, но времени было мало. А приоритет я отдала родителям. Это было то, к чему рвалась моя душа. И я надеюсь, что никто не остался в обиде.
 
-Я летела в Америку с радостью от того, как чудесно мы провели время и сколько всего еще нам предстоит! 
-Лечу обратно в дом, который мы с Кириллом вместе построили, где много любви и тепла. 
+Я летела в Америку с радостью от того, как чудесно мы провели время и сколько всего еще нам предстоит!
+Лечу обратно в дом, который мы с Кириллом вместе построили, где много любви и тепла.
 
 Но так хотелось бы взять и вечерком заехать к маме с папой.
 
