--- a/_posts/stories/2017-11-10-yosemite.markdown
+++ b/_posts/stories/2017-11-10-yosemite.markdown
@@ -58,11 +58,11 @@ images:
 
 Когда к нам приехала Даша, недавно пробежавшая свой первый марафон, мы поняли, что лучше момента не будет. Надо брать Дашу и ехать. Так мы и сделали.
 
-Выехав в пятницу около семи вечера, к ночи мы были в гостинице *Yosemite Cedar Lodge*. От Сан Франциско мы проехали около 260 километров, а от въезда в парк нам оставалось 15 минут. На территории самого Yosemite останавливаться не только дорого, но еще и сложно: гостиницу необходимо бронировать ооочень заранее.
+Выехав в пятницу около семи вечера, к ночи мы были в гостинице *Yosemite Cedar Lodge*. От Сан-Франциско мы проехали около 260 километров, а от въезда в парк нам оставалось 15 минут. На территории самого Yosemite останавливаться не только дорого, но еще и сложно: гостиницу необходимо бронировать ооочень заранее.
 
 {% include image src="img_3459.jpg" %}
 
-Выйдя из машины, мы услышали журчание реки Merced River. Небо было просто усыпано звездами и слышно было сверчков. Температура тоже отличалась от привычной. Днем в Сан Франциско было около 25°C, а вечером в Yosemite - 4°C. Но воздух! Воздух совершенно другой. Я не жалуюсь на воздух в городе, но в Yosemite чувствуется, что это горы. Хотелось просто стоять, дышать полной грудью и искать созвездия.
+Выйдя из машины, мы услышали журчание реки Merced River. Небо было просто усыпано звездами и слышно было сверчков. Температура тоже отличалась от привычной. Днем в Сан-Франциско было около 25°C, а вечером в Yosemite - 4°C. Но воздух! Воздух совершенно другой. Я не жалуюсь на воздух в городе, но в Yosemite чувствуется, что это горы. Хотелось просто стоять, дышать полной грудью и искать созвездия.
 
 {% include image src="img_3222.jpg" %}
 
@@ -133,7 +133,7 @@ images:
 * позаботьтесь об офлайн картах заранее
 * приезжайте в парк как можно раньше (9-10 утра - это уже поздно). C парковкой у Yosemite Falls, Glacier point и Visitor Center в такое время будут сложности.
 * удобная и не скользкая обувь обязательна! если проблемы с коленями, то лучше взять с собой наколенники, спуски с гор могут быть очень резким и длинными. Берегите ноги!
-* здесь сильно прохладнее, чем в Сан Франциско. Если днем на солнце и будет очень жарко, то к вечеру вы почувствуете настоящий холод. Берите побольше одежды с собой.
+* здесь сильно прохладнее, чем в Сан-Франциско. Если днем на солнце и будет очень жарко, то к вечеру вы почувствуете настоящий холод. Берите побольше одежды с собой.
 * еда! в Visitor Center есть кафешка, в которой можно покушать. Но вы не захотите быть к ней привязаны, поэтому для свободы передвижения - берите побольше еды с собой. Ну и побольше снэков, ни спасают.
 * если планируете посетить больше 2 национальных парков по всей Америке за год - берите годовой абонемент
 
