--- a/_posts/stories/2017-07-25-grocery.markdown
+++ b/_posts/stories/2017-07-25-grocery.markdown
@@ -7,7 +7,7 @@ original-date: 2017-07-04
 thumbnail: img_1296.jpg
 images:
   - img_1296.jpg
-  - img_1327.jpg | С надписью Organic всегда дороже. 
+  - img_1327.jpg | С надписью Organic всегда дороже.
   - 2017-04-29_20-54-36_713.jpeg | Русский магазин
   - 2017-04-29_20-55-01_455.jpeg | Русский магазин
   - 2017-04-29_20-55-26_350.jpeg | Тортики в русском магазине. Как в детстве, только страшно смотреть =)
@@ -28,27 +28,27 @@ images:
 
 
 <!--separate-->
-Перед первым походом за продуктами лучше заранее подготовиться, ведь европейский путешественник очень удивится совершенно незнакомым мерам измерения. На милях вместо километров в Америке дело не ограничилось. 
+Перед первым походом за продуктами лучше заранее подготовиться, ведь европейский путешественник очень удивится совершенно незнакомым мерам измерения. На милях вместо километров в Америке дело не ограничилось.
 
 На упаковке или ценнике будут написаны:
 не миллилитры, а унции и галлоны (1 унция=29.57 мл., 1 галлон=3785 мл.),
-не граммы/килограммы, а паунды (1 паунд=453.6 гр.). 
+не граммы/килограммы, а паунды (1 паунд=453.6 гр.).
 
-Итак, приступаем к покупкам. 
+Итак, приступаем к покупкам.
 
-Предлагаю начать с **фруктов и овощей**. В нашем рационе они занимают первое место. 
+Предлагаю начать с **фруктов и овощей**. В нашем рационе они занимают первое место.
 
 Фрукты и овощи можно купить в любом супермаркете, но гораздо интереснее идти на Farmer's market или в China Town (или в другие китайские/мексиканские лавочки).
 
-**Farmer's market** - это событие, которое проходит в каждом городе один или несколько раз в неделю. Местные фермеры привозят свой урожай на продажу. Также на рынке обычно много разной готовой еды. Поэтому кто-то идет туда за покупками, а кто-то просто ради приятного времяпрепровождения. Цены на Farmer's market-ах бывают разные. Все зависит от конкретного места. Но по моему опыту, цены на рынке очень близки к тому, что вы найдете в супермаркете. Отличие в том, что на рынке больше вероятность купить Organic и можно пообщаться с фермером. 
-  
+**Farmer's market** - это событие, которое проходит в каждом городе один или несколько раз в неделю. Местные фермеры привозят свой урожай на продажу. Также на рынке обычно много разной готовой еды. Поэтому кто-то идет туда за покупками, а кто-то просто ради приятного времяпрепровождения. Цены на Farmer's market-ах бывают разные. Все зависит от конкретного места. Но по моему опыту, цены на рынке очень близки к тому, что вы найдете в супермаркете. Отличие в том, что на рынке больше вероятность купить Organic и можно пообщаться с фермером.
+
 Обычно местные жители уже знают свой рынок и ходят туда каждую неделю.
 
 {% include image src="2017-05-21_10-51-14_166.jpeg" title="Фермерский рынок" %}
- 
-Второй и наш вариант: China town. Почему "наш вариант"? Потому, что мы живем неподалеку и, благодаря этому, можем туда ходить. 
 
-В Сан Франциско один из самых больших China Town-ов в Америке. Одна его часть посвящена сувенирам, а вторая - это, по сути, большой продуктовый рынок. Здесь представлены все известные и не известные нам фрукты и овощи. Цены дешевле раза в 3-4, чем в супермаркете или на farmer's market, да и продукты всегда свежие.
+Второй и наш вариант: China town. Почему "наш вариант"? Потому, что мы живем неподалеку и, благодаря этому, можем туда ходить.
+
+В Сан-Франциско один из самых больших China Town-ов в Америке. Одна его часть посвящена сувенирам, а вторая - это, по сути, большой продуктовый рынок. Здесь представлены все известные и не известные нам фрукты и овощи. Цены дешевле раза в 3-4, чем в супермаркете или на farmer's market, да и продукты всегда свежие.
 
 {% include image src="2017-07-10_16-08-06_495.jpeg" title="Китайский рынок" %}
 
@@ -77,9 +77,9 @@ images:
 
 Теперь перейдем к остальным продуктам.
 
-И прежде чем начать рассказ о сетевых супермаркетах, я хочу уделить внимание **Русскому магазину**!  Тому самому месту, где можно купить гречку, манку и прочие любимые с детства продукты. 
+И прежде чем начать рассказ о сетевых супермаркетах, я хочу уделить внимание **Русскому магазину**!  Тому самому месту, где можно купить гречку, манку и прочие любимые с детства продукты.
 
-Если душа просит русской еды и вы живете в San Francisco - надо смело отправляться в магазин Europa Plus. В городе он один, хотя в окрестностях есть много других русских магазинов. 
+Если душа просит русской еды и вы живете в San Francisco - надо смело отправляться в магазин Europa Plus. В городе он один, хотя в окрестностях есть много других русских магазинов.
 
 Крупами дело не ограничивается. Здесь можно купить сласти, консервы, молочные продукты, семечки, русские газеты, некоторые из основных лекарств и даже русские аудио и видео кассеты, если вы конечно найдете, куда их вставить. =)
 
@@ -87,10 +87,10 @@ images:
 
 {% include image src="2017-04-29_20-54-57_527.jpeg" title="Русский магазин" %}
 
-Итак, переходим к супермаркетам. 
+Итак, переходим к супермаркетам.
 В черте города я знаю 5 сетей супермаркетов: Whole Foods, Target, Costco, Trader Joe's и Safeway.
 
-Здесь мы покупаем все, что не нашли в China town-e. 
+Здесь мы покупаем все, что не нашли в China town-e.
 
 С вегетарианскими продуктами в Америке, конечно, раздолье. Кроме того, что фрукты и овощи совсем другие на вкус и доступны круглый год, так еще и очень много вариантов замены мяса. В супермаркетах есть целые отделы, где можно найти как свежие, так и замороженные вегетарианские блюда: всегда есть несколько видов тофу, соевого мяса, "вегетарианских" котлет и т.д. Мы еще все не перепробовали и пока далеки от этого.
 
@@ -98,7 +98,7 @@ images:
 <sub> <sup>*на этом фото нет ни одного мясного изделия*
 
 
-**Whole Foods**. Здесь все прекрасно, вкусно и, чаще всего, полезно. Они очень внимательно следят за составом продуктов, которые выкладывают на прилавки, поэтому явно "химических" продуктов тут нет. Также есть отдел с лекарствами и витаминами, которые часто в других местах или аптеках просто не купить. Ну и, конечно, здесь можно найти какую-нибудь очередную полезную вкусняшку без сахара. 
+**Whole Foods**. Здесь все прекрасно, вкусно и, чаще всего, полезно. Они очень внимательно следят за составом продуктов, которые выкладывают на прилавки, поэтому явно "химических" продуктов тут нет. Также есть отдел с лекарствами и витаминами, которые часто в других местах или аптеках просто не купить. Ну и, конечно, здесь можно найти какую-нибудь очередную полезную вкусняшку без сахара.
 Минусы: очень дорого. Если ограничиться покупкой выборочных товаров - то все хорошо, но если закупаться всеми продуктами, то рискуете остаться без кошелька.
 
 
@@ -110,31 +110,31 @@ images:
 
 {% include image src="safeway-trjoe.jpg" %}
 
-**Safeway**. Здесь уже не контролируют состав продуктов, как это происходит в Whole Foods и Trader Joe's. Поэтому, будь любезен, читай состав самостоятельно. Однако, иногда могут быть очень хорошие находки. Такие как томатная паста или кукуруза без каких-либо добавок, включая соль и консерванты. Или, например, крупы по $1-$2. Килограмм овсянки за $2,50. 
-И лидер рейтинга - мороженое. Пинта низкокалорийного протеинового мороженого (473 мл.) всего 150 ккал. Есть еще вариант на 320 ккал - это мороженое уже не уступит по вкусу Ben&Jerry's, в которому куча сахара и 1300 ккал в среднем. 
+**Safeway**. Здесь уже не контролируют состав продуктов, как это происходит в Whole Foods и Trader Joe's. Поэтому, будь любезен, читай состав самостоятельно. Однако, иногда могут быть очень хорошие находки. Такие как томатная паста или кукуруза без каких-либо добавок, включая соль и консерванты. Или, например, крупы по $1-$2. Килограмм овсянки за $2,50.
+И лидер рейтинга - мороженое. Пинта низкокалорийного протеинового мороженого (473 мл.) всего 150 ккал. Есть еще вариант на 320 ккал - это мороженое уже не уступит по вкусу Ben&Jerry's, в которому куча сахара и 1300 ккал в среднем.
 
-**Trader Joe's**. Можно сказать, что это почти как Whole Foods, только цены гораздо доступнее, находится рядом с домом и продавцы ходят в гавайских рубашках. Продукты хорошего качества и можно купить много всего интересного и необычного. Большинство продуктов мы покупаем именно здесь. 
+**Trader Joe's**. Можно сказать, что это почти как Whole Foods, только цены гораздо доступнее, находится рядом с домом и продавцы ходят в гавайских рубашках. Продукты хорошего качества и можно купить много всего интересного и необычного. Большинство продуктов мы покупаем именно здесь.
 Из интересного, первое время нам очень нравилась индийская замороженная еда. Хоть это и полуфабрикат, но состав очень хороший. Разогрел в духовке и по вкусу тоже самое, что в ресторане. Только в 3 раза дешевле.
 Также мы здесь покупаем орехи. Очень много разных видов и продаются они чаще всего в пакетике по одному паунду.
-Еще есть много готовых салатиков и различных роллов. Соус обычно лежит отдельно, салаты всегда свежие и вкусные. 
+Еще есть много готовых салатиков и различных роллов. Соус обычно лежит отдельно, салаты всегда свежие и вкусные.
 Очень удобно во время прогулки зайти в Trader Joe's и купить такой салатик. Вкусно и полезно. Цены за салаты варьируются от $2.99 до $4,49.
 
 {% include image src="img_1324.jpg" title="Салатики в Trader Joe's" %}
 
-Я постаралась быть краткой. Надеюсь, теперь у вас есть некоторое представление о том, что мы тут едим. 
+Я постаралась быть краткой. Надеюсь, теперь у вас есть некоторое представление о том, что мы тут едим.
 
-Ниже пример корзины не совсем стандартных продуктов из Trader Joe's на общую сумму $72. Приятного аппетита! 
+Ниже пример корзины не совсем стандартных продуктов из Trader Joe's на общую сумму $72. Приятного аппетита!
 {% include image src="trader joe's bag.jpg" %}
 
-* cottage cheese - творог. на вкус похоже на то, что в питере называется зерновым творогом, только с солью  
-* грецкие орехи и кешью 
-* зелень 
-* цельнозерновые хлебцы  
+* cottage cheese - творог. на вкус похоже на то, что в питере называется зерновым творогом, только с солью
+* грецкие орехи и кешью
+* зелень
+* цельнозерновые хлебцы
 * beef-less: вегетарианский фарш (на вкус и вид ничем не отличается от обычного)
-* вегетарианские сосиски (тоже самое, что и с мясом) 
-* черный шоколад без сахара  
-* изюм  
-* миндальное молочко  
+* вегетарианские сосиски (тоже самое, что и с мясом)
+* черный шоколад без сахара
+* изюм
+* миндальное молочко
 * кокосовое масло
 
 PS: пока я готовила статью, мы подсчитали, что на продукты в среднем тратим около $1000 в месяц на двоих:)
