--- a/_posts/stories/2017-05-01-guests.markdown
+++ b/_posts/stories/2017-05-01-guests.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Гости, приезжайте еще!"
+title:  "Гости, приезжайте еще! Или что показывать туристам в Сан Франциско."
 date:   2017-05-01 12:00:24 -0800
 comments: true
 permalink: /2017/05/01/guests.html
