--- a/_posts/stories/2017-09-05-piter.markdown
+++ b/_posts/stories/2017-09-05-piter.markdown
@@ -87,7 +87,7 @@ images:
 
 Конечно, очень хотелось бы встретиться и со всеми друзьями, но времени было мало. А приоритет я отдала родителям. Это было то, к чему рвалась моя душа. И я надеюсь, что никто не остался в обиде.
 
-Я летела в Америку с радостью от того, как чудесно мы провели время и сколько всего еще нам предстоит!
+Я летела в Америку с радостью от того, как чудесно мы провели время и сколько всего ещё нам предстоит!
 Лечу обратно в дом, который мы с Кириллом вместе построили, где много любви и тепла.
 
 Но так хотелось бы взять и вечерком заехать к маме с папой.
