--- a/_posts/cooking/2017-10-16-sushi.markdown
+++ b/_posts/cooking/2017-10-16-sushi.markdown
@@ -4,7 +4,7 @@ title:  "Вегетарианские суши"
 categories: cooking
 hidden: true
 date: 2017-10-16 07:25:24 -0800
-comments: true 
+comments: true
 thumbnail: IMG_3465.JPG
 ---
 
@@ -32,18 +32,18 @@ thumbnail: IMG_3465.JPG
 
 1) Первым делом нужно отварить рис. Есть множество вариантов того, как это можно сделать. Ниже тот, который понравился мне:
 
-Хорошо промытый рис выложить в кастрюлю с толстым дном. Залить водой в таком соотношении: на каждые 200 г риса должно быть 250 мл воды. Кастрюля должна быть наполнена водой и рисом не больше чем на треть. Накрыть кастрюлю крышкой, включить средний огонь, довести до кипения, снизить нагрев до минимального, при слабом кипении проварить рис 10-15 мин до полного впитывания воды, убрать кастрюлю с плиты, не открывая крышку оставить еще на 10-15 мин. Затем добавить несколько столовых ложен рисового уксуса и оставить остывать.
+Хорошо промытый рис выложить в кастрюлю с толстым дном. Залить водой в таком соотношении: на каждые 200 г риса должно быть 250 мл воды. Кастрюля должна быть наполнена водой и рисом не больше чем на треть. Накрыть кастрюлю крышкой, включить средний огонь, довести до кипения, снизить нагрев до минимального, при слабом кипении проварить рис 10-15 мин до полного впитывания воды, убрать кастрюлю с плиты, не открывая крышку оставить ещё на 10-15 мин. Затем добавить несколько столовых ложен рисового уксуса и оставить остывать.
 
-2) Итак, самая сложная часть позади. 
+2) Итак, самая сложная часть позади.
 
-Пока рис готовился, мы уже порезали все ингредиенты и поджарили на сковородке грибы. 
+Пока рис готовился, мы уже порезали все ингредиенты и поджарили на сковородке грибы.
 Кстати, если вы захотите расширить ассортимент и добавить свои ингредиенты, смело экспериментируйте и пишите в комментариях, что у вас получилось! Буду очень рада новым идеям.
 
-3) В небольшую мисочку налейте рисового уксуса. В него вы будете макать руки, чтобы не приставал рис. 
+3) В небольшую мисочку налейте рисового уксуса. В него вы будете макать руки, чтобы не приставал рис.
 
 Далее на циновку (я обычно оборачиваю ее пищевой пленкой) положите лист нори гладкой стороной вниз. На него максимально тонким слоем выкладывайте рис.
 
-Внимание! Важно, чтобы дальний от вас край листа нори оставался без риса (примерно шириной 2 см). 
+Внимание! Важно, чтобы дальний от вас край листа нори оставался без риса (примерно шириной 2 см).
 
 4) Теперь в ход идет фантация. Выкладывайте ингредиенты по вашему желанию к ближайшему к вам краю листа нори. А затем очень плотно скручивайте.
 
@@ -59,7 +59,7 @@ thumbnail: IMG_3465.JPG
 
 {% include image src="IMG_3458.JPG" %}
 
-5) Подготовьте очень хорошо заточеный нож. Сначала отрежьте неровные края получившихся роллов. Затем разрежьте ролл пополам, поле чего получившиеся половинки поделите еще на 3 или 4 части.
+5) Подготовьте очень хорошо заточеный нож. Сначала отрежьте неровные края получившихся роллов. Затем разрежьте ролл пополам, поле чего получившиеся половинки поделите ещё на 3 или 4 части.
 
 Приятного аппетита!
 
