--- a/_posts/stories/2017-05-01-guests.markdown
+++ b/_posts/stories/2017-05-01-guests.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Гости, приезжайте еще! Или что показывать туристам в Сан Франциско."
+title:  "Гости, приезжайте ещё! Или что показывать туристам в Сан Франциско."
 date:   2017-05-01 12:00:24 -0800
 comments: true
 permalink: /2017/05/01/guests.html
@@ -24,7 +24,7 @@ images:
 ---
 
 Давно от меня не было поста. Так странно, сама себе придумала блог, а теперь переживаю, что не успеваю писать.
-Причиной на этот раз послужило совсем не то, что мне нечего делать, я обленилась или еще что-то в таком роде. Истиной причиной было то, что событий было очень много!
+Причиной на этот раз послужило совсем не то, что мне нечего делать, я обленилась или ещё что-то в таком роде. Истиной причиной было то, что событий было очень много!
 
 <!--separate-->
 
@@ -53,7 +53,7 @@ images:
 
 * играем в старинные механические игровые автоматы в **_Musee Mecanique_**
 * заходим в **_Rainforest cafe_** - смотрим на джунгли, устроенные прямо в магазине, и заглядываем в витрину **_Boudin_**, где мастера хлебопекарного дела выпекают свои новые шедевры
-* идем до **_Ghirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ...и тд
+* идем до **_Ghirardelli square_**, где ещё в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ...и тд
 * нагулявшись вдоволь у вас есть два варианта:
   * Идти пешком до **_Golden Gate bridge_**. Прогулка будет очень приятной: картинка будет меняться, вы пройдете по парку, вдоль яхт и пляжа. И все это с видом на мост. Этот маршрут займет примерно 1 час 30 минут
   * Ехать на 28 автобусе. Из-за недостатка времени (начали прогулку мы только в 2 часа дня) мы выбрали именно этот вариант. Остановка автобуса находится совсем рядом с вышеупомянутой Ghirardelli sq.
@@ -62,18 +62,18 @@ images:
 
 * как только все оказываются у моста, обычно начинается фотосессия, что неудивительно, ведь многие приезжают в Сан-Франциско, чтобы посмотреть мост (который очень потрясает, но не является единственным интересным местом в городе)
 * дальше у вас снова два варианта:
-  * одни из наших друзей еще по дороге к мосту взяли на прокат велосипеды, поехали через мост и в **_Sausalito_** - очень уютный городок с променадом и видом на  San Francisco
+  * одни из наших друзей ещё по дороге к мосту взяли на прокат велосипеды, поехали через мост и в **_Sausalito_** - очень уютный городок с променадом и видом на  San Francisco
   * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **_Haight street_**, соседствующую с **_Golden Gate park_**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующие, а дух (запах) свободы чувствуется на каждом углу
   * мы же с девочками дошли пешком до **_Baker beach_**, о чем ни разу не пожалели. Ведь я уже рассказывала вам о том, какой вид с него открывается
 * оттуда мы уже взяли uber и переместились к **_Union square_** - центру современной жизни города. Здесь же рядом  **_Financial district_**, магазины и рестораны.
-* так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага **_Macy's_** есть ресторан **_Cheesecake factory_**, а в этом ресторане при входе есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район и соседние дома закроют вам вид на океан.
-* через **_Dragon's Gate_** перемещаемся в настоящий Китайский город, где стараемся не сойти с ума от суматохи, которая там творится, насладиться видами красных фонариков, подвещенных через улицу, купить сувениры и направиться дальше
+* так получилось, что ещё в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага **_Macy's_** есть ресторан **_Cheesecake factory_**, а в этом ресторане при входе есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район и соседние дома закроют вам вид на океан.
+* через **_Dragon's Gate_** перемещаемся в настоящий Китайский город, где стараемся не сойти с ума от суматохи, которая там творится, насладиться видами красных фонариков, подвещённых через улицу, купить сувениры и направиться дальше
 
 {% include image src="2017-05-01 05.03.38.jpg" %}
 
 * если вы идете по нашему маршруту, то у вас уже должен был наступить вечер и вы должны были оказаться на углу Broadway и Columbus ave. Здесь, я советую вам неспешно прогуляться и направиться ко мне в гости - на Stockton street. За чаем и посиделками у камина =)
 
-Конечно, Сан-Франциско- огромный город и увидеть все за несколько дней просто невозможно, но вот вам еще неполный список мест, которые я бы очень хотела, чтобы вы посетили:
+Конечно, Сан-Франциско- огромный город и увидеть все за несколько дней просто невозможно, но вот вам ещё неполный список мест, которые я бы очень хотела, чтобы вы посетили:
 
   * прогулялись по **Embarcadero** - променаду, идущему от **Ferry building** и до самого пирса 39
   * провели время на **Ocean beach** - самом большом пляже в города
