--- a/_posts/stories/2017-03-31-friends.markdown
+++ b/_posts/stories/2017-03-31-friends.markdown
@@ -9,11 +9,11 @@ thumbnail: 2017-03-11_14-56-40_993.jpg
 ---
 
 Дорогой мой друг!
-Если ты получил от меня письмо о том, что вышел новый пост и сейчас читаешь эти строки, значит ты -один из самых близких мне людей!
+Если ты получил от меня письмо о том, что вышел новый пост и сейчас читаешь эти строки, значит ты - один из самых близких мне людей!
 Спасибо, что ты есть! Спасибо, что ты регулярно пишешь и живо интересуешься тем, как мы тут (а кое-кто даже звонит)! Спасибо, что смотришь мои фотографии! Спасибо тебе! Я очень счастлива и благодарна каждому из вас за то, что вы есть в моей жизни!
 <!--separate-->
 
-Благодаря Кире, теперь я могу не только писать. Теперь  у вас есть возможность смотреть фотографии и писать комментарии под каждым постом прямо на сайте. Мне будет очень приятно их читать, а также получать от вас обратную связь! Ну и конечно, теперь я буду присылать вам письмо, если выходит новая статья.
+Благодаря Кире, теперь я могу не только писать. У вас есть возможность смотреть фотографии и писать комментарии под каждым постом прямо на сайте. Мне будет очень приятно их читать, а также получать от вас обратную связь! Ну и, конечно, теперь я буду присылать вам письмо, когда выходит новая статья.
 
 Если говорить об этой неделе, она была очень странной! С одной стороны она была очень спокойной. Несколько вечером мы посвятили развитию сайта, я выкладывала свои старые записи и фотографии. Кира усовершенствовал и автоматизировал его работу. Мы ходили в зал и на полюбившуюся yoga в Grace Cathedral.
 
