--- a/_posts/stories/2017-05-01-guests.markdown
+++ b/_posts/stories/2017-05-01-guests.markdown
@@ -1,10 +1,11 @@
 ---
 layout: post
-title:  "Гости, приезжайте ещё! Или что показывать туристам в Сан Франциско."
+title:  "Гости, приезжайте ещё! Или что показывать туристам в Сан-Франциско."
 date:   2017-05-01 12:00:24 -0800
 comments: true
 permalink: /2017/05/01/guests.html
 thumbnail: IMG_9813.JPG
+tags: Туристы МестаВСанФранциско Путешествия
 images:
   - IMG_9800.JPG
   - IMG_9804.JPG
@@ -23,12 +24,11 @@ images:
   - IMG_9915.JPG
 ---
 
-Давно от меня не было поста. Так странно, сама себе придумала блог, а теперь переживаю, что не успеваю писать.
-Причиной на этот раз послужило совсем не то, что мне нечего делать, я обленилась или ещё что-то в таком роде. Истиной причиной было то, что событий было очень много!
+Давно от меня не было поста. Причиной на этот раз послужило совсем не то, что мне нечего делать, я обленилась или ещё что-то в таком роде. Истиной причиной было то, что событий было очень много!
 
 <!--separate-->
 
-Как говорит Таня Мишина: "Если ты уезжаешь от Veeam-а, то Veeam приедет к тебе". Я верила ее словам, ведь она теперь живет в Праге. А от Праги до Питера лететь меньше 3х часов. Даже мы успели слетать туда прошлой осенью.
+Как говорит Таня Мишина: "Если ты уезжаешь от Veeam-а, то Veeam приедет к тебе". Я верила её словам, ведь она теперь живет в Праге. А от Праги до Питера лететь меньше 3х часов. Даже мы успели слетать туда прошлой осенью.
 
 Но когда мне начали поступать сообщения от ребят из Veeam о том, что Presidents club (поездка-вознаграждение от компании за успешное закрытие годового плана) в этом году будет на Гавайях и, как продолжение, они планируют путешествии по Америке, то я была очень удивлена и обрадована одновременно.
 
@@ -62,9 +62,9 @@ images:
 
 * как только все оказываются у моста, обычно начинается фотосессия, что неудивительно, ведь многие приезжают в Сан-Франциско, чтобы посмотреть мост (который очень потрясает, но не является единственным интересным местом в городе)
 * дальше у вас снова два варианта:
-  * одни из наших друзей ещё по дороге к мосту взяли на прокат велосипеды, поехали через мост и в **_Sausalito_** - очень уютный городок с променадом и видом на  San Francisco
-  * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **_Haight street_**, соседствующую с **_Golden Gate park_**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующие, а дух (запах) свободы чувствуется на каждом углу
-  * мы же с девочками дошли пешком до **_Baker beach_**, о чем ни разу не пожалели. Ведь я уже рассказывала вам о том, какой вид с него открывается
+* одни из наших друзей ещё по дороге к мосту взяли на прокат велосипеды, поехали через мост и в **_Sausalito_** - очень уютный городок с променадом и видом на  San Francisco
+* брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **_Haight street_**, соседствующую с **_Golden Gate park_**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующие, а дух (запах) свободы чувствуется на каждом углу
+* мы же с девочками дошли пешком до **_Baker beach_**, о чем ни разу не пожалели. Ведь я уже рассказывала вам о том, какой вид с него открывается
 * оттуда мы уже взяли uber и переместились к **_Union square_** - центру современной жизни города. Здесь же рядом  **_Financial district_**, магазины и рестораны.
 * так получилось, что ещё в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага **_Macy's_** есть ресторан **_Cheesecake factory_**, а в этом ресторане при входе есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район и соседние дома закроют вам вид на океан.
 * через **_Dragon's Gate_** перемещаемся в настоящий Китайский город, где стараемся не сойти с ума от суматохи, которая там творится, насладиться видами красных фонариков, подвещённых через улицу, купить сувениры и направиться дальше
@@ -73,7 +73,7 @@ images:
 
 * если вы идете по нашему маршруту, то у вас уже должен был наступить вечер и вы должны были оказаться на углу Broadway и Columbus ave. Здесь, я советую вам неспешно прогуляться и направиться ко мне в гости - на Stockton street. За чаем и посиделками у камина =)
 
-Конечно, Сан-Франциско- огромный город и увидеть все за несколько дней просто невозможно, но вот вам ещё неполный список мест, которые я бы очень хотела, чтобы вы посетили:
+Конечно, Сан-Франциско - огромный город и увидеть все за несколько дней просто невозможно, но вот вам ещё неполный список мест, которые я бы очень хотела, чтобы вы посетили:
 
   * прогулялись по **Embarcadero** - променаду, идущему от **Ferry building** и до самого пирса 39
   * провели время на **Ocean beach** - самом большом пляже в города
