--- a/_posts/stories/2017-09-05-piter.markdown
+++ b/_posts/stories/2017-09-05-piter.markdown
@@ -5,6 +5,7 @@ date: 2017-09-05 00:25:24 -0800
 comments: true
 original-date: 2017-07-28
 thumbnail: thumbnail-piter.jpg
+tags: Путешествия
 images:
   - img_1315.jpg | Лемболовское озеро
   - img_1305.jpg | Лемболовское озеро
