--- a/_posts/stories/2018-01-01-2017-final.markdown
+++ b/_posts/stories/2018-01-01-2017-final.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2017-final
+title: Как прошел 2017 год или чем же ты занимаешься, раз ты не работаешь?
 date: '2018-01-01 04:00:36 -0800'
 original-date: '2018-01-01'
 comments: true
@@ -8,20 +8,22 @@ thumbnail:
 images:
 ---
 
-Вот и подошел к концу 2017 год. Понятие Нового Года очень философское. Но не важно, как вы  относитесь к празднику, важно, что его можно использовать как чёткий интервал времени для подведениями итогов одного периода жизни и установки целей на новый.
+Вот и подошел к концу 2017 год. Понятие Нового Года очень философское. Но совершенно не важно, как вы относитесь к празднику. Важно, что его можно использовать как чёткий интервал времени для подведениями итогов одного периода жизни и установки целей на новый.
 <!--separate--> 
 
-Это был, пожалуй, самый необычный, сложный, полный впечатлений и новых открытий год для меня и нашей семьи. Море нового опыта, выхода из зоны комфорта и продвижения. Оглядываясь назад я понимаю, сколько всего проделано и сколько еще работы, желаний и новых идей ждет меня впереди впереди.
+Не удивляйтесь, что только к концу января я "созрела" к публикации этой статьи. Простите и поймите. Я была в Питере, а для меня  это другая вселенная. Сейчас я снова в Сан Франциско и, по моим ощущениям, новый календарный год только начался.
+
+Это был, самый необычный, сложный, полный впечатлений и новых открытий год для меня и нашей семьи. Море нового опыта, выхода из зоны комфорта и продвижения. Оглядываясь назад я понимаю, сколько всего проделано и сколько еще работы, желаний и новых идей ждет меня впереди.
 
 Если искренне верить в свои желания, то они начинают сбываться. Но для этого большинство желаний из желаний должны превращаться в цели. Из целей в планы. А из планов в последовательные действия.
 
-Я постаралась подвести результаты периода моей жизни по названием «2017».
+Я постаралась подвести результаты периода моей жизни по названием «2017 год».
 
 1. Мы переехали в Сан Франциско. Здесь нашли квартиру и обустроились в новой для нас стране.
-2. Я начала писать заметки о нашей жизни (это для меня удивительное событие, ведь это совсем не похоже на меня) и это привело меня к пункту 3.
+2. Я начала писать заметки о нашей жизни (это удивительное событие, ведь никогда раньше я не писала) и это привело меня к пункту 3.
 3. Мы запустили сайт karmelalla.com. Спасибо тебе, Кирилл, за то, что предложил создать сайт, создал его и теперь постоянно улучшаешь и наполняешь его новыми «фишками»
 4. Я пробежала мой первый полумарафон. 21 км время 2 часа 14 минут
-5. Мы преодолели тысячи миль на машах и самолетах и десятки километров пешеходных маршрутов в:
+5. Мы преодолели тысячи миль на машинах и самолетах, и десятки километров пешеходных маршрутов в:
     * Лос Анжелес
     * Сан Диего
     * Лас Вегас
@@ -33,31 +35,38 @@ images:
     * Disney Land
     * Universal Studios
     * Нью Йорк с Женечкой
-1. И в продолжение к предыдущему пункту, мы изучили многие уголки Сан Франциско. И я даже составила маршрут для туристов
-2. Мы посетили самые престижные соревнования в мире по бодибилдингу «Mr. Olympia»
-3. Я Научилась пользоваться Macbook, Github, Sublime, Markdown, Photoshop, Lightroom и активно использовать горячие  клавиши.  Не понимаю, как жила раньше.
-4. Начала изучать Фотографию
-5. Сделала курс по Business English
-6. Два раза съездила в Россию
-7. Мы привезли Женечку на месяц в Америку
-8. Я Получила Калифорнийские права
-9. Научилась делать так, чтобы дома жили цветы
-10. Мы начали заниматься йогой, хотя хотелось бы побольше
-11. Прочитала больше книг, чем в 2016
-12. Познакомилась с тётей из Лос Анжелеса. Тётя Фира, очень счастлива, что мы нашлись!
+1. Мы изучили самые секретные уголки Сан Франциско. И я составила <a href="http://karmelalla.com/2017/05/01/guests.html">маршрут для туристов</a>.
+2. Мы посетили самые престижные соревнования в мире по бодибилдингу «Mr. Olympia».
+3. Я Научилась пользоваться Macbook, Github, Sublime, Markdown, Photoshop, Lightroom и активно использовать горячие клавиши.  Не понимаю, как жила раньше.
+4. Начала изучать "Фотографию".
+5. Прошла курс по Business English в San Francisco City College.
+6. Два раза съездила в Россию.
+7. Мы привезли Женечку на месяц в Америку и показали ей Нью Йорк, Сан Франциско, Лос Анжелес и Дисней Ленд.
+8. Я получила Калифорнийские права.
+9. Научилась делать так, чтобы дома жили цветы.
+10. Мы начали заниматься йогой, хотя хотелось бы побольше.
+11. Прочитала много книг (гораздо больше, чем могла прочитать раньше).
+12. Познакомилась с тётей из Лос Анжелеса. Тётя Фира, я очень счастлива, что мы нашлись!
 
-Много интересного было в 2017 году. Я очень благодарна моим родителям, сестре, друзьям и всем людям, которые меня окружают за заботу и поддержку. . Год был не простым. А расставание  с вами было очень тяжелым. Все вы оставались на связи, часто звонили и писали. Дарили любовь и заботу. Это - самое ценное. Спасибо, что вы все есть.
+Много интересного было в 2017 году. Я очень благодарна моим родителям, сестре, друзьям и всем людям, которые меня окружают за заботу и поддержку. Год был не простым. А расставание с вами - очень тяжелым. Все вы оставались на связи, часто звонили и писали. Дарили любовь и заботу. Это - самое ценное. Спасибо, что вы все есть!
 
 Спасибо тебе, Кирилл! Большинство пунктов из этого списка стали возможными благодаря тебе. Благодаря тому, что ты поддерживаешь меня в любых идеях или сам приносишь их в нашу жизнь. Это не всегда легко. А порой и очень тяжело. Но вместе мы отличная команда и со всем справимся. Впереди нас ждут новые интересные открытия, это точно!
 
-Спасибо, Лена (моя тётя из Сан Франциско) за поддержку и море советов в этом году. Не хочу думать о том, какой бы этот год был без тебя и твоей семьи.
+Спасибо, Лена (моя тётя из Сан Франциско) за поддержку и море советов в этом году. Не хочу думать о том, какой бы этот год был без тебя и твоей семьи. Совершенно точно, ты - огромный корень моего дерева, которое переехало в новую страну.
 
+И спасибо, конечно, вам, читатели сайта. От того, что вы у меня есть, мне очень тепло. Оставляйте побольше комментариев, так я буду знать, что вы со мной. Мне это жизненно необходимо.
 
-И спасибо, конечно, вам, читатели сайта. От того, что вы у меня есть, мне очень тепло.
-Оставляйте побольше комментариев, так я буду знать, что вы со мной. Мне это жизненно необходимо.
 Пишите ваши пожелания и идеи. Что бы вы хотели узнать в Новом году? Какие темы вам интересны?
 
 Все вы: мои близкие, друзья, читатели сайта подарили мне этот год.  И я очень благодарна каждому из вас за это!
 
 Я желаю всем вам исполнения желаний! Главное не забывайте купить «лотерейный билет»!
+
+>Один человек мечтал выиграть в лотерею. Каждый день он приходил в храм вставал на колени и просил Бога:
+--- Господи, помоги мне выиграть в лотерею!
+Прошел месяц, второй… Однажды человек, как обычно, пришел в храм, встал на колени и стал молиться:
+--- Господи, ну дай же мне выиграть в лотерею! Ведь другие выигрывают. Что тебе стоит?!
+Вдруг над его головой раздался голос Всевышнего:
+--- Да купи же ты, наконец, лотерейный билет!
+
 <!--{% include image src="" %}-->
