--- a/_posts/stories/2018-01-01-2017-final.markdown
+++ b/_posts/stories/2018-01-01-2017-final.markdown
@@ -62,11 +62,15 @@ images:
 
 Я желаю всем вам исполнения желаний! Главное не забывайте купить «лотерейный билет»!
 
->Один человек мечтал выиграть в лотерею. Каждый день он приходил в храм вставал на колени и просил Бога:
---- Господи, помоги мне выиграть в лотерею!
-Прошел месяц, второй… Однажды человек, как обычно, пришел в храм, встал на колени и стал молиться:
---- Господи, ну дай же мне выиграть в лотерею! Ведь другие выигрывают. Что тебе стоит?!
-Вдруг над его головой раздался голос Всевышнего:
---- Да купи же ты, наконец, лотерейный билет!
+>
+Один человек мечтал выиграть в лотерею. Каждый день он приходил в храм вставал на колени и просил Бога:
+---Господи, помоги мне выиграть в лотерею!
+
+>Прошел месяц, второй… Однажды человек, как обычно, пришел в храм, встал на колени и стал молиться:
+---Господи, ну дай же мне выиграть в лотерею! Ведь другие выигрывают. Что тебе стоит?!
+
+> Вдруг над его головой раздался голос Всевышнего:
+
+> ---Да купи же ты, наконец, лотерейный билет!
 
 <!--{% include image src="" %}-->
