--- a/_posts/stories/2018-01-01-2017-final.markdown
+++ b/_posts/stories/2018-01-01-2017-final.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Как прошел 2017 год или чем же ты занимаешься, раз ты не работаешь?
+title: Как прошел 2017 год или "чем ты занимаешься, пока ты не работаешь"?
 date: '2018-01-01 04:00:36 -0800'
 original-date: '2018-01-01'
 comments: true
@@ -8,57 +8,58 @@ thumbnail:
 images:
 ---
 
-Вот и подошел к концу 2017 год. Понятие Нового Года очень философское. Но совершенно не важно, как вы относитесь к празднику. Важно, что его можно использовать как чёткий интервал времени для подведениями итогов одного периода жизни и установки целей на новый.
+
+Вот и подошел к концу 2017 год. Понятие Нового Года философское. Но это не важно, как вы относитесь к празднику. Важно, что его можно использовать как чёткий интервал времени для подведениями итогов одного периода жизни и установки целей на новый.
 <!--separate--> 
 
-Не удивляйтесь, что только к концу января я "созрела" к публикации этой статьи. Простите и поймите. Я была в Питере, а для меня  это другая вселенная. Сейчас я снова в Сан Франциско и, по моим ощущениям, новый календарный год только начался.
+Не удивляйтесь, что только к концу января я "созрела" к публикации этой статьи. Простите и поймите. Я была в Питере, а - это другая вселенная. Сейчас я снова в Сан Франциско и, по моим ощущениям, новый календарный год только начался.
 
-Это был, самый необычный, сложный, полный впечатлений и новых открытий год для меня и нашей семьи. Море нового опыта, выхода из зоны комфорта и продвижения. Оглядываясь назад я понимаю, сколько всего проделано и сколько еще работы, желаний и новых идей ждет меня впереди.
+Это был самый необычный, сложный, полный впечатлений и новых открытий год для меня и нашей семьи. Море нового опыта и выхода из зоны комфорта. Оглядываясь назад, понимаю, сколько работы проделано и сколько ещё ждет впереди.
 
-Если искренне верить в свои желания, то они начинают сбываться. Но для этого большинство желаний из желаний должны превращаться в цели. Из целей в планы. А из планов в последовательные действия.
+Если искренне верить в желания, то они начинают сбываться. Но для этого большинство желаний должны превращаться в цели. Из целей - в планы. А из планов в последовательные действия.
 
-Я постаралась подвести результаты периода моей жизни по названием «2017 год».
+Итак, вот, что сбылось у меня в 2017 году:
 
 1. Мы переехали в Сан Франциско. Здесь нашли квартиру и обустроились в новой для нас стране.
-2. Я начала писать заметки о нашей жизни (это удивительное событие, ведь никогда раньше я не писала) и это привело меня к пункту 3.
-3. Мы запустили сайт karmelalla.com. Спасибо тебе, Кирилл, за то, что предложил создать сайт, создал его и теперь постоянно улучшаешь и наполняешь его новыми «фишками»
-4. Я пробежала мой первый полумарафон. 21 км время 2 часа 14 минут
-5. Мы преодолели тысячи миль на машинах и самолетах, и десятки километров пешеходных маршрутов в:
-    * Лос Анжелес
-    * Сан Диего
-    * Лас Вегас
-    * Гранд Каньон
-    * Озеро Тахо
-    * Санта Круз
-    * Монтерей, Кармель, 17 mile drive, Bixby Bridge
-    * Йосемите
-    * Disney Land
-    * Universal Studios
-    * Нью Йорк с Женечкой
-1. Мы изучили самые секретные уголки Сан Франциско. И я составила <a href="http://karmelalla.com/2017/05/01/guests.html">маршрут для туристов</a>.
-2. Мы посетили самые престижные соревнования в мире по бодибилдингу «Mr. Olympia».
-3. Я Научилась пользоваться Macbook, Github, Sublime, Markdown, Photoshop, Lightroom и активно использовать горячие клавиши.  Не понимаю, как жила раньше.
-4. Начала изучать "Фотографию".
-5. Прошла курс по Business English в San Francisco City College.
-6. Два раза съездила в Россию.
-7. Мы привезли Женечку на месяц в Америку и показали ей Нью Йорк, Сан Франциско, Лос Анжелес и Дисней Ленд.
-8. Я получила Калифорнийские права.
-9. Научилась делать так, чтобы дома жили цветы.
-10. Мы начали заниматься йогой, хотя хотелось бы побольше.
-11. Прочитала много книг (гораздо больше, чем могла прочитать раньше).
-12. Познакомилась с тётей из Лос Анжелеса. Тётя Фира, я очень счастлива, что мы нашлись!
+2. Я начала писать заметки о нашей жизни (это удивительное событие, ведь никогда раньше я не писала).
+3. Мы запустили сайт <a href="http://karmelalla.com/">karmelalla.com</a>. За 2017 год я написала <a href="http://karmelalla.com/">37 статей</a>, <a href="http://karmelalla.com/cooking/">8 рецептов</a> и выложила <a href="http://karmelalla.com/gallery/">596 фотографий</a>. Спасибо тебе, Кирилл, за то, что предложил создать сайт, создал его и теперь постоянно улучшаешь и наполняешь его новыми «фишками».
+4. Я <a href="http://karmelalla.com/first-half-marathon">впервые пробежала полумарафон</a> . 21 км за 2 часа 14 минут
+5. Преодолели тысячи миль на машинах и самолетах, и десятки километров пешеходных маршрутов в:
+* <a href="http://karmelalla.com/2017/04/12/los-angeles-p1.html">Лос Анжелес</a>
+* Сан Диего
+* <a href="http://karmelalla.com/olympia-grand-canyon">Лас Вегас</a>
+* <a href="http://karmelalla.com/olympia-grand-canyon">Гранд Каньон</a>
+* <a href="http://karmelalla.com/2017/07/02/lake-tahoe.html">Озеро Тахо</a>
+* Санта Круз
+* <a href="http://karmelalla.com/jekyll/update/2017/03/21/monterey-carmel.html">Monterey, Carmel, 17 mile drive, Bixby Bridge</a>
+* <a href="http://karmelalla.com/yosemite">Yosemite</a>
+* Disney Land
+* Universal Studios
+* Нью Йорк с Женечкой
+5. Изучили самые секретные уголки Сан Франциско. И я составила <a href="http://karmelalla.com/2017/05/01/guests.html">туристический маршрут</a> по этому вошебному городу.
+6. Посетили соревнования по бодибилдингу <a href="http://karmelalla.com/olympia-grand-canyon">«Mr. Olympia»</a>.
+7. Я научилась пользоваться Macbook, Github, Sublime, Markdown, Photoshop, Lightroom и выучила многие горячие клавиши.  Не понимаю, как жила раньше.
+8. Начала изучать "фотографию".
+9. Прошла курс по Business English в San Francisco City College.
+10. Два раза съездила в Россию.
+11. Мы привезли Женечку на месяц в Америку и показали ей Нью Йорк, Сан Франциско, Лос Анжелес и Disneyland.
+12. Получила калифорнийские водительские права.
+13. Научилась делать так, чтобы дома жили цветы.
+14. Мы начали заниматься йогой, хотя хотелось бы побольше.
+15. Прочитала много книг (гораздо больше, чем раньше).
+16. Познакомилась с тётей из Лос Анжелеса. Тётя Фира, я очень счастлива, что мы нашлись!
 
-Много интересного было в 2017 году. Я очень благодарна моим родителям, сестре, друзьям и всем людям, которые меня окружают за заботу и поддержку. Год был не простым. А расставание с вами - очень тяжелым. Все вы оставались на связи, часто звонили и писали. Дарили любовь и заботу. Это - самое ценное. Спасибо, что вы все есть!
+Много интересного было в 2017 году. Я очень благодарна родителям, сестре, друзьям и всем близким людям, окружающим меня за заботу и поддержку. Год был не простым. А расставание с вами - очень тяжелым. Все вы оставались на связи, часто звонили, писали, дарили любовь и заботу. Это - самое ценное. Спасибо, что вы есть!
 
-Спасибо тебе, Кирилл! Большинство пунктов из этого списка стали возможными благодаря тебе. Благодаря тому, что ты поддерживаешь меня в любых идеях или сам приносишь их в нашу жизнь. Это не всегда легко. А порой и очень тяжело. Но вместе мы отличная команда и со всем справимся. Впереди нас ждут новые интересные открытия, это точно!
+Спасибо, Кирилл! Многие пункты из этого списка стали возможными благодаря тебе. Благодаря тому, что ты поддерживаешь меня в любых идеях или сам приносишь их в нашу жизнь. Это не всегда легко. Но вместе мы отличная команда и со всем справимся. Впереди нас ждут новые интересные открытия!
 
-Спасибо, Лена (моя тётя из Сан Франциско) за поддержку и море советов в этом году. Не хочу думать о том, какой бы этот год был без тебя и твоей семьи. Совершенно точно, ты - огромный корень моего дерева, которое переехало в новую страну.
+Спасибо, Лена, за поддержку и море советов в этом году. Не хочу думать о том, какой бы этот год был без тебя и твоей семьи. Совершенно точно, вы - огромный корень моего дерева, которое переехало в новую страну.
 
-И спасибо, конечно, вам, читатели сайта. От того, что вы у меня есть, мне очень тепло. Оставляйте побольше комментариев, так я буду знать, что вы со мной. Мне это жизненно необходимо.
+И конечно,  спасибо вам, читатели сайта. От того, что вы у меня есть, мне очень тепло. Оставляйте побольше комментариев, так я буду знать, что вы со мной. Мне это жизненно необходимо.
 
-Пишите ваши пожелания и идеи. Что бы вы хотели узнать в Новом году? Какие темы вам интересны?
+Пишите пожелания и идеи. Что бы вы хотели узнать в Новом году? Какие темы вам интересны?
 
-Все вы: мои близкие, друзья, читатели сайта подарили мне этот год.  И я очень благодарна каждому из вас за это!
+Все вы: мои близкие, друзья, читатели сайта подарили мне этот год.  И я очень благодарна каждому из вас за это!
 
 Я желаю всем вам исполнения желаний! Главное не забывайте купить «лотерейный билет»!
 
