--- a/_posts/stories/2018-01-01-2017-final.markdown
+++ b/_posts/stories/2018-01-01-2017-final.markdown
@@ -17,8 +17,8 @@ images:
   - img_3246.jpg | Bixby Bridge
   - img_3550.jpg | 17 mile-drive
   - img_3854.jpg | Гранд Каньон
-  - img_0657.jpg |
-  - img_8544.jpg |
+  - img_0657.jpg | Сан-Диего
+  - img_8544.jpg | Вид с Твин Пикс на Сан-Франциско
   - img_9008.jpg |
 ---
 
@@ -81,7 +81,7 @@ images:
 Спасибо, Лена, за поддержку и море советов в этом году. Не хочу думать о том, какой бы этот год был без тебя и твоей семьи. Совершенно точно, вы - огромный корень моего дерева, которое переехало в новую страну.
 
 
-И конечно,  спасибо вам, читатели сайта. От того, что вы у меня есть, мне очень тепло. Оставляйте побольше комментариев, так я буду знать, что вы со мной. Мне это жизненно необходимо.
+И конечно, спасибо вам, читатели сайта. От того, что вы у меня есть, мне очень тепло. Оставляйте побольше комментариев, так я буду знать, что вы со мной. Мне это жизненно необходимо.
 
 {% include image src="img_3598.jpg" %}
 
