--- a/_posts/stories/2018-01-01-2017-final.markdown
+++ b/_posts/stories/2018-01-01-2017-final.markdown
@@ -11,7 +11,7 @@ images:
 
   - img_0133.jpg | Санта-Барбара
   - img_2151.jpg | Нью Йорк с Женечкой
-  - img_2341.jpg | Мост 'золотые ворота'
+  - img_2341.jpg | Мост 'Золотые ворота'
   - img_3068.jpg | Пляж в Санта-Круз
   - img_3099.jpg | Дамба Гувера
   - img_3246.jpg | Bixby Bridge
@@ -19,7 +19,7 @@ images:
   - img_3854.jpg | Гранд Каньон
   - img_0657.jpg | Сан-Диего
   - img_8544.jpg | Вид с Твин Пикс на Сан-Франциско
-  - img_9008.jpg |
+  - img_9008.jpg
 ---
 
 Вот и подошел к концу 2017 год. Понятие Нового Года философское. Но не важно, как вы относитесь к празднику. Важно, что его можно использовать как чёткий интервал времени для подведениями итогов одного периода жизни и установки целей на новый.
@@ -89,7 +89,7 @@ images:
 Все вы - мои близкие, друзья, читатели сайта подарили мне этот год.  И я очень благодарна каждому из вас за это!
 Я желаю всем вам исполнения желаний! Главное не забывайте купить «лотерейный билет»!
 
-{% include image src="img_2424_1.jpg"  title="Пляж в Сан-Франциско Ocean Beach" %}
+{% include image src="img_2424_1.jpg" %}
 
 >
 Один человек мечтал выиграть в лотерею. Каждый день он приходил в храм вставал на колени и просил Бога:
