--- a/_posts/stories/2018-01-01-2017-final.markdown
+++ b/_posts/stories/2018-01-01-2017-final.markdown
@@ -22,10 +22,10 @@ images:
   - img_9008.jpg
 ---
 
-Вот и подошел к концу 2017 год. Понятие Нового Года философское. Но не важно, как вы относитесь к празднику. Важно, что его можно использовать как чёткий интервал времени для подведениями итогов одного периода жизни и установки целей на новый.
+Вот и подошел к концу 2017 год. Понятие Нового Года философское. Но не важно, как вы относитесь к празднику. Важно, что его можно использовать как чёткий интервал времени для подведения итогов одного периода жизни и установки целей на новый.
 <!--separate--> 
 
-Не удивляйтесь, что только к концу января я "созрела" к публикации этой статьи. Простите и поймите. Я была в Питере, а - это другая вселенная. Сейчас я снова в Сан-Франциско и, по моим ощущениям, новый календарный год только начался.
+Не удивляйтесь, что только к концу января я "созрела" к публикации этой статьи. Я была в Питере, а - это другая вселенная. Сейчас я снова в Сан-Франциско и, по моим ощущениям, новый календарный год только начался.
 
 {% include image src="img_4441_1.jpg" title="Встречаем Новый Год в Питере" %}
 
@@ -61,7 +61,7 @@ images:
 9. Прошла курс по Business English в San Francisco City College.
 10. Два раза съездила в Россию.
 11. Мы привезли Женечку на месяц в Америку и показали ей Нью Йорк, Сан-Франциско, Лос Анжелес и Disneyland.
-12. Мы приняли у себя в гостях Дашу и она полюбила Сан-Франциско еще больше, чем мы.
+12. Мы приняли у себя в гостях Дашу, и она полюбила Сан-Франциско еще больше, чем мы.
 13. Получила калифорнийские водительские права.
 14. Научилась делать так, чтобы дома жили цветы.
 15. Мы начали заниматься йогой, хотя хотелось бы побольше.
@@ -92,7 +92,7 @@ images:
 {% include image src="img_2424_1.jpg" %}
 
 >
-Один человек мечтал выиграть в лотерею. Каждый день он приходил в храм вставал на колени и просил Бога:
+Один человек мечтал выиграть в лотерею. Каждый день он приходил в храм, вставал на колени и просил Бога:
 ---Господи, помоги мне выиграть в лотерею!  
 Прошел месяц, второй… Однажды человек, как обычно, пришел в храм, встал на колени и стал молиться:
 ---Господи, ну дай же мне выиграть в лотерею! Ведь другие выигрывают. Что тебе стоит?!
