--- a/_posts/stories/2018-01-01-2017-final.markdown
+++ b/_posts/stories/2018-01-01-2017-final.markdown
@@ -8,17 +8,20 @@ thumbnail: thumbnail-img_9269.jpg
 tags: ЖизньВСанФранциско Размышления Переезд
 images:
 
-  - img_0133.jpg | Санта-Барбара
   - img_2151.jpg | Нью Йорк с Женечкой
   - img_2341.jpg | Мост 'Золотые ворота'
   - img_3068.jpg | Пляж в Санта-Круз
-  - img_3099.jpg | Дамба Гувера
   - img_3246.jpg | Bixby Bridge
   - img_3550.jpg | 17 mile-drive
   - img_3854.jpg | Гранд Каньон
   - img_0657.jpg | Сан-Диего
+  - img_0667.jpg | Сан-Диего
   - img_8544.jpg | Вид с Твин Пикс на Сан-Франциско
   - img_9008.jpg
+  - 2017-05-26_18-57-48_788.jpg| Universal Studios
+  - img_2249.jpg | Disneyland
+  - ysl8ltb7ne0.jpg | Times Square
+
 ---
 
 Вот и подошел к концу 2017 год. Понятие Нового Года философское. Но не важно, как вы относитесь к празднику. Важно, что его можно использовать как чёткий интервал времени для подведения итогов одного периода жизни и установки целей на новый.
