--- a/_posts/stories/2018-01-01-2017-final.markdown
+++ b/_posts/stories/2018-01-01-2017-final.markdown
@@ -70,11 +70,11 @@ images:
 
 {% include image src="img_8506.jpg" %}
 
-Много интересного было в 2017 году. Я очень благодарна родителям, сестре, друзьям и всем близким людям, окружающим меня за заботу и поддержку. Год был не простым. А расставание с вами - очень тяжелым. Все вы оставались на связи, часто звонили, писали, дарили любовь и заботу. Это - самое ценное. Спасибо, что вы есть!
+Много интересного было в 2017 году. Я очень благодарна родителям, сестре, друзьям и всем близким людям, окружающим меня, за заботу и поддержку. Год был не простым. А расставание с вами - очень тяжелым. Все вы оставались на связи, часто звонили, писали, дарили любовь и заботу. Это - самое ценное. Спасибо, что вы есть!
 
 {% include image src="img_3078.jpg" title="Санта-Круз" %}
 
-Спасибо, Кирилл! Многие пункты из этого списка стали возможными благодаря тебе. Благодаря тому, что ты поддерживаешь меня в любых идеях или сам приносишь их в нашу жизнь. Это не всегда легко. Но вместе мы отличная команда и со всем справимся. Впереди нас ждут новые интересные открытия!
+Спасибо, Кирилл! Многие пункты из этого списка стали возможными благодаря тебе. Благодаря тому, что ты поддерживаешь меня в любых идеях или сам приносишь их в нашу жизнь. Это не всегда легко. Но вместе мы - отличная команда и со всем справимся. Впереди нас ждут новые интересные открытия!
 
 {% include image src="lena_golden_gate.jpg" title="Покоряем мост 'Золотые Ворота' на велосипедах" %}
 
@@ -86,8 +86,8 @@ images:
 {% include image src="img_3598.jpg" %}
 
 Пишите пожелания и идеи. Что бы вы хотели узнать в Новом году? Какие темы вам интересны?
-Все вы - мои близкие, друзья, читатели сайта подарили мне этот год.  И я очень благодарна каждому из вас за это!
-Я желаю всем вам исполнения желаний! Главное не забывайте купить «лотерейный билет»!
+Все вы - мои близкие, друзья, читатели сайта, подарили мне этот год.  И я очень благодарна каждому из вас за это!
+Я желаю всем вам исполнения желаний! Главное - не забывайте купить «лотерейный билет»!
 
 {% include image src="img_2424_1.jpg" %}
 
